# grocery-receipt

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_add_off_fields_to_products.py  0003_product_categories_m2m.py  5adc22b19119_create_core_tables.py  f61ac8c0685f_add_ticket_dedup_fields.py
backend/app/: main.py
backend/app/api/: categories.py  dependencies.py  exceptions.py  google_drive.py  health.py  products.py  supermarkets.py  tickets.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  category.py  line_item.py  mixins.py  product.py  supermarket.py  ticket.py
backend/app/schemas/: category.py  enrichment.py  google_drive.py  line_item.py  pagination.py  product.py  receipt.py  supermarket.py  ticket.py
backend/app/services/: category.py  enrichment.py  gemini.py  google_drive.py  line_item.py  openfoodfacts.py  product.py  receipt.py  supermarket.py  ticket.py
backend/tests/: conftest.py  test_categories.py  test_drive_sync.py  test_enrichment.py  test_health.py  test_products.py  test_receipts.py  test_supermarkets.py  test_tickets.py
docker/initdb/: create-test-db.sh
docs/superpowers/plans/: 2026-03-29-e5-openfoodfacts-enrichment.md
docs/superpowers/specs/: 2026-03-29-e5-openfoodfacts-enrichment-design.md
