[project]
name = "grocery-receipt"
version = "0.1.0"
description = "Herramientas de desarrollo del monorepo"
authors = [
    {name = "Alberto Luque",email = "alberto.luque@holafly.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
